[package]
name = "ai-econ-viz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "0.2"
three-d = { path = "../three-d/", default-features = false, features = ["glutin-window", "canvas"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
